# agentic-network-activity-scraper

./: .env.sample  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
scripts/examples/: basic_run.py  goethe_events_blueprint.json
src/agent/: __init__.py  constants.py  extraction.py  runner.py  scraping_agent.py  tools.py  types.py
src/agentic_network_scraper/agent/: runner.py  scraping_agent.py  tools.py  types.py
src/agentic_network_scraper/blueprints/: __init__.py  execute.py
src/agentic_network_scraper/browser/: __init__.py  engine.py  session.py  types.py
src/agentic_network_scraper/common/: urls.py
src/blueprints/: execute.py
src/browser/: annotate.py  events.py  overlay.py  session.py
src/common/: __init__.py  log.py
tests/: test_blueprints.py  test_engine.py  test_extraction.py  test_integration.py  test_runner.py  test_urls.py
