[project]
name = "agentic-network-scraper"
version = "0.1.0"
description = "Network-layer extractor: captures browser network traffic and uses a PydanticAI agent + pydantic-graph to declaratively extract structured data via JMESPath or jq."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "John Klingelhofer", email = "jkklingelhofer@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-ai>=0.0.54",
    "pydantic-graph>=0.0.54",
    "jmespath>=1.0.1",
    "jq>=1.8.0",
    "anthropic>=0.30",
    "playwright>=1.44",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "black>=25.0",
    "ruff>=0.11",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agnetic_network_scraper"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=src --cov-report=term-missing"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN"]
